<resources>
    <string name="app_name">PartyHouse</string>
    <string name="app_name_ru">ПАТИХАУС</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  LoginFragment  -->
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_text">Войти</string>
    <string name="reg_text_underlined"><u>Регистрация</u></string>

    <!--  RegisterFragment  -->
    <string name="reg_text">РЕГИСТРАЦИЯ</string>
    <string name="password_confirm_hint">Повтор пароля</string>
    <string name="first_name_hint">Имя</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="bdate_hint">Дата рождения</string>
    <string name="about_hint">Пару слов о себе :)</string>
    <string name="vk_hint">Ссылка на VK</string>
    <string name="register_button">Зарегистрироваться!</string>

    <!--  ProfileActivity  -->
    <string name="age_mock">20 лет</string>
    <string name="vklink_mock">https://vk.com/id0</string>
    <string name="rating_mock">4,6</string>

    <!--  EventFullInfoActivity  -->
    <string name="event_name">Название мероприятия</string>
    <string name="full_name">Имя фамилия</string>
    <string name="full_info">Полная информация о мероприятии</string>
    <string name="event_date">8 августа, 17:45</string>
    <string name="event_place">м. Юго-Западная</string>
    <string name="guests_count">Людей: 15/25</string>
    <string name="event_price">Взнос: от 1000Р</string>
    <string name="tick_button_text">Я иду!</string>

</resources>