<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/registerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/reg_text"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/regLoginEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/regLoginEditText"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/regPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerHeader"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/regPasswordEditText"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/confirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regLoginEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/firstnameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regPasswordEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/firstnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name_hint"
        app:layout_constraintBottom_toTopOf="@id/lastnameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>

    <EditText
        android:id="@+id/lastnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name_hint"
        app:layout_constraintBottom_toTopOf="@id/bdateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstnameEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>

    <EditText
        android:id="@+id/bdateEditText"
        android:hint="@string/bdate_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@id/aboutEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastnameEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>

    <EditText
        android:id="@+id/aboutEditText"
        android:hint="@string/about_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/vkEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bdateEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>

    <EditText
        android:id="@+id/vkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/vk_hint"
        app:layout_constraintBottom_toTopOf="@id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutEditText"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vkEditText"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>