<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EventFullInfoActivity">

    <ImageView
        android:id="@+id/eventImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pattern" />

    <TextView
        android:id="@+id/eventNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/event_name"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventImageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/miniAvatarCardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventNameTextView">

        <androidx.cardview.widget.CardView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">


            <ImageView
                android:id="@+id/miniAvatar"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/orgNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/full_name"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ratingContainerFull"
        app:layout_constraintStart_toEndOf="@+id/miniAvatarCardView"
        app:layout_constraintTop_toTopOf="@id/miniAvatarCardView"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/ratingContainerFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/miniAvatarCardView"
        app:layout_constraintStart_toEndOf="@id/miniAvatarCardView"
        app:layout_constraintTop_toBottomOf="@id/orgNameTextView">


        <ImageView
            android:id="@+id/starImageViewFull"
            android:layout_width="24sp"
            android:layout_height="24sp"

            android:layout_marginTop="2sp"
            android:layout_marginBottom="2sp"
            app:srcCompat="@drawable/ic_baseline_star_24" />

        <TextView
            android:id="@+id/ratingTextViewFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/rating_mock"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/fullInfoTextView"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/full_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miniAvatarCardView"
        app:layout_constraintBottom_toTopOf="@id/dateTextView"/>



    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_date"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullInfoTextView"
        app:layout_constraintBottom_toTopOf="@id/placeTextView"/>

    <TextView
        android:id="@+id/placeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/event_place"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"/>

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeTextView"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/tickButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/tick_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_weight="1"
                android:id="@+id/guestsCountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/guests_count"
                app:layout_constraintVertical_chainStyle="packed"
                android:textSize="16sp"/>

            <TextView
                android:layout_weight="1"
                android:id="@+id/priceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/event_price"
                android:textSize="16sp"/>

        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>