<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <!-- TODO: add cardview for informations group   -->
    <androidx.cardview.widget.CardView
        android:id="@+id/avatarCardView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">


            <ImageView
                android:id="@+id/avatar"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/firstnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_hint"
        app:layout_constraintBottom_toTopOf="@id/lastnameTextView"
        app:layout_constraintStart_toEndOf="@+id/avatarCardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp" 
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/lastnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_hint"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/avatarCardView"
        app:layout_constraintTop_toBottomOf="@id/firstnameTextView"
        app:layout_constraintBottom_toTopOf="@id/ageTextView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/avatarCardView"
        app:layout_constraintTop_toBottomOf="@id/lastnameTextView"
        app:layout_constraintBottom_toBottomOf="@id/avatarCardView"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:text="@string/age_mock"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarCardView"
        android:layout_marginTop="8dp"
        android:id="@+id/vklogoContainer"
        >


        <ImageView
            android:id="@+id/vklogoImageView"
            android:layout_width="32sp"
            android:layout_height="32sp"
            app:srcCompat="@drawable/ic_vklogo"
            android:layout_marginStart="16sp"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="2sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vklink_mock"
            android:textSize="20sp"
            android:layout_marginTop="4sp"
            android:layout_marginStart="10sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vklogoContainer"
        android:layout_marginTop="8dp"
        android:id="@+id/ratingContainer"
        >


        <ImageView
            android:id="@+id/starImageView"
            android:layout_width="32sp"
            android:layout_height="32sp"
            app:srcCompat="@drawable/ic_baseline_star_24"
            android:layout_marginStart="16sp"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="2sp"/>
        <TextView
            android:id="@+id/ratingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_mock"
            android:textSize="20sp"
            android:layout_marginTop="4sp"
            android:layout_marginStart="10sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>